--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -32,86 +32,116 @@
       </div>
     </nav>
 
-    <div class="extensionswrapper">
-      <div class="extensionsbox">
-        <h1>ADMISSIONS OPS TEAM</h1>
-        <table>
-          <tr class="importantcontact"><td>Sue Chamberlain</td><td>5812</td></tr>
-          <tr class="importantcontact"><td>Almir Salkic</td><td>6640</td></tr>
-          <tr class="importantcontact"><td>Irene Webster (Front Desk)</td><td>5990</td></tr>
-          <tr><td>Direct Line</td><td>2727</td></tr>
-          <tr><td>Mike Crowley</td><td>6636</td></tr>
-          <tr><td>Grace Curley</td><td>6429</td></tr>
-          <tr><td>Karen Heil</td><td>5902</td></tr>
-          <tr><td>Diana Matot</td><td>5975</td></tr>
-          <tr><td>Ginger Pressey</td><td>6288</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>ADMISSIONS COUNSELORS</h1>
-        <table>
-          <tr class="importantcontact"><td>Jovan Ellis</td><td>5805</td></tr>
-          <tr class="importantcontact"><td>Veronica Lewis</td><td>6635</td></tr>
-          <tr><td>Julia Caminiti</td><td>5994</td></tr>
-          <tr><td>Howie LeBlanco</td><td>6639</td></tr>
-          <tr><td>Nicole Lentine</td><td>6642</td></tr>
-          <tr><td>Nadia Mitchell</td><td>6644</td></tr>
-          <tr><td>Chris Perlongo</td><td>5740</td></tr>
-          <tr><td>Alana Perry</td><td>6646</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>STUDENT ACCOUNTS</h1>
-        <table>
-          <tr class="importantcontact"><td>Direct Line</td><td>2330</td></tr>
-          <tr><td>Shelley Bernier</td><td>6482</td></tr>
-          <tr><td>Mikael Blanco</td><td>5718</td></tr>
-          <tr><td>Diane Byrnes</td><td>6419</td></tr>
-          <tr><td>Teresa Crowley</td><td>6473</td></tr>
-          <tr><td>Sue Garrow</td><td>6483</td></tr>
-          <tr><td>Pat Kennedy</td><td>6484</td></tr>
-          <tr><td>Tami Patnode</td><td>6664</td></tr>
-          <tr><td>Maureen Whitney</td><td>5718</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>ESC</h1>
-        <table>
-          <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
-          <tr><td>Sara Commins</td><td>5970</td></tr>
-          <tr><td>Kristen Dolan</td><td>5848</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>INTERNATIONAL EDUCATION</h1>
-        <table>
-          <tr><td>James Cross</td><td>6633</td></tr>
-          <tr><td>Sarah DeShaw</td><td>2742</td></tr>
-          <tr><td>Noah Goldblatt</td><td>6464</td></tr>
-          <tr><td>Jessa Karki</td><td>6485</td></tr>
-          <tr><td>Elin Melchior</td><td>5842</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>GRAD ADMISSIONS</h1>
-        <table>
-          <tr><td>Duncan Adamson</td><td>6645</td></tr>
-          <tr><td>Marissa George</td><td>6601</td></tr>
-          <tr><td>Carin McCarthy</td><td>6603</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>FINANCIAL AID</h1>
-        <table>
-          <tr class="importantcontact"><td>Direct Line</td><td>2906</td></tr>
-        </table>
-      </div>
-      <div class="extensionsbox">
-        <h1>OTHER/GENERAL</h1>
-        <table>
-          <tr class="importantcontact"><td>Student Ambassador Office</td><td>2305</td></tr>
-          <tr><td>Top Desk</td><td>2313</td></tr>
-        </table>
+    <div class="extensionswrapperwrapper">
+      <div class="extensionswrapper">
+        <div class="extensionsbox">
+          <h1>ADMISSIONS OPS TEAM</h1>
+          <table>
+            <tr class="importantcontact"><td>Sue Chamberlain</td><td>5812</td></tr>
+            <tr class="importantcontact"><td>Almir Salkic</td><td>6640</td></tr>
+            <tr class="importantcontact"><td>Irene Webster (Front Desk)</td><td>5990</td></tr>
+            <tr><td>Direct Line</td><td>2727</td></tr>
+            <tr><td>Mike Crowley</td><td>6636</td></tr>
+            <tr><td>Grace Curley</td><td>6429</td></tr>
+            <tr><td>Karen Heil</td><td>5902</td></tr>
+            <tr><td>Diana Matot</td><td>5975</td></tr>
+            <tr><td>Ginger Pressey</td><td>6288</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>ADMISSIONS COUNSELORS</h1>
+          <table>
+            <tr class="importantcontact"><td>Jovan Ellis</td><td>5805</td></tr>
+            <tr class="importantcontact"><td>Veronica Lewis</td><td>6635</td></tr>
+            <tr><td>Julia Caminiti</td><td>5994</td></tr>
+            <tr><td>Howie LeBlanco</td><td>6639</td></tr>
+            <tr><td>Nicole Lentine</td><td>6642</td></tr>
+            <tr><td>Nadia Mitchell</td><td>6644</td></tr>
+            <tr><td>Chris Perlongo</td><td>5740</td></tr>
+            <tr><td>Alana Perry</td><td>6646</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>STUDENT ACCOUNTS</h1>
+          <table>
+            <tr class="importantcontact"><td>Direct Line</td><td>2330</td></tr>
+            <tr><td>Shelley Bernier</td><td>6482</td></tr>
+            <tr><td>Mikael Blanco</td><td>5718</td></tr>
+            <tr><td>Diane Byrnes</td><td>6419</td></tr>
+            <tr><td>Teresa Crowley</td><td>6473</td></tr>
+            <tr><td>Sue Garrow</td><td>6483</td></tr>
+            <tr><td>Pat Kennedy</td><td>6484</td></tr>
+            <tr><td>Tami Patnode</td><td>6664</td></tr>
+            <tr><td>Maureen Whitney</td><td>5718</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>ESC</h1>
+          <table>
+            <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
+            <tr><td>Sara Commins</td><td>5970</td></tr>
+            <tr><td>Kristen Dolan</td><td>5848</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>INTERNATIONAL EDUCATION</h1>
+          <table>
+            <tr><td>James Cross</td><td>6633</td></tr>
+            <tr><td>Sarah DeShaw</td><td>2742</td></tr>
+            <tr><td>Noah Goldblatt</td><td>6464</td></tr>
+            <tr><td>Jessa Karki</td><td>6485</td></tr>
+            <tr><td>Elin Melchior</td><td>5842</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>GRAD ADMISSIONS</h1>
+          <table>
+            <tr><td>Duncan Adamson</td><td>6645</td></tr>
+            <tr><td>Marissa George</td><td>6601</td></tr>
+            <tr><td>Carin McCarthy</td><td>6603</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>FINANCIAL AID</h1>
+          <table>
+            <tr class="importantcontact"><td>Direct Line</td><td>2906</td></tr>
+            <tr><td>Katrina Bennett</td><td>5766</td></tr>
+            <tr><td>David Boyle</td><td>5778</td></tr>
+            <tr><td>Greg Davis</td><td>5435</td></tr>
+            <tr><td>Rick Doran</td><td>5474</td></tr>
+            <tr><td>Heather Hanson</td><td>6430</td></tr>
+            <tr><td>Kristi Jovell</td><td>5728</td></tr>
+            <tr><td>John Lanzetta</td><td>2789</td></tr>
+            <tr><td>Molly Pepper</td><td>5701</td></tr>
+            <tr><td>Baine Trombley</td><td>6665</td></tr>
+            <tr><td>Michelle Veladota</td><td>6435</td></tr>
+            <tr><td>Carolyn Walsh</td><td>4064</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>OTHER/GENERAL</h1>
+          <table>
+            <tr class="importantcontact"><td>Student Ambassador Office</td><td>2305</td></tr>
+            <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
+            <tr><td>Campus Safety</td><td>6465</td></tr>
+            <tr><td>Campus Store</td><td>2754</td></tr>
+            <tr><td>Career Collaborative</td><td>2720</td></tr>
+            <tr><td>Continuing Prof. Studies</td><td>2637</td></tr>
+            <tr><td>Dining Services</td><td>2719</td></tr>
+            <tr><td>Event Center</td><td>5957</td></tr>
+            <tr><td>Mike Jacobs (Production Stage)</td><td>5779</td></tr>
+            <tr><td>Help Desk/Champ Support</td><td>2710</td></tr>
+            <tr><td>LEAD</td><td>5857</td></tr>
+            <tr><td>Mail Center</td><td>2385</td></tr>
+            <tr><td>Military &amp; Veterans Advisor</td><td>5778</td></tr>
+            <tr><td>Parking &amp; Transportation (Nic Anderson)</td><td>8464</td></tr>
+            <tr><td>Physical Plant</td><td>2705</td></tr>
+            <tr><td>President's Office (Shaylea Scribner)</td><td>2733</td></tr>
+            <tr><td>Residential Life</td><td>2704</td></tr>
+            <tr><td>Student Activities</td><td>5904</td></tr>
+            <tr><td>Vice President of Enrollment</td><td>5911</td></tr>
+          </table>
+        </div>
       </div>
     </div>
 
