--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -62,6 +62,17 @@
           </table>
         </div>
         <div class="extensionsbox">
+          <h1>ADMISSIONS GENERAL</h1>
+          <table>
+            <tr class="importantcontact"><td>Student Ambassadors</td><td>2305</td></tr>
+            <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
+            <tr class="importantcontact"><td>Front Desk</td><td>5990</td></tr>
+              <tr><td>Financial Aid Direct Line</td><td>2906</td></tr>
+              <tr><td>Student Accounts Direct Line</td><td>2330</td></tr>
+              <tr><td>Admissions Operations Direct Line</td><td>2727</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
           <h1>STUDENT ACCOUNTS</h1>
           <table>
             <tr class="importantcontact"><td>Direct Line</td><td>2330</td></tr>
@@ -81,16 +92,6 @@
             <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
             <tr><td>Sara Commins</td><td>5970</td></tr>
             <tr><td>Kristen Dolan</td><td>5848</td></tr>
-          </table>
-        </div>
-        <div class="extensionsbox">
-          <h1>INTERNATIONAL EDUCATION</h1>
-          <table>
-            <tr><td>James Cross</td><td>6633</td></tr>
-            <tr><td>Sarah DeShaw</td><td>2742</td></tr>
-            <tr><td>Noah Goldblatt</td><td>6464</td></tr>
-            <tr><td>Jessa Karki</td><td>6485</td></tr>
-            <tr><td>Elin Melchior</td><td>5842</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
@@ -120,8 +121,6 @@
         <div class="extensionsbox">
           <h1>OTHER/GENERAL</h1>
           <table>
-            <tr class="importantcontact"><td>Student Ambassador Office</td><td>2305</td></tr>
-            <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
             <tr><td>Campus Safety</td><td>6465</td></tr>
             <tr><td>Campus Store</td><td>2754</td></tr>
             <tr><td>Career Collaborative</td><td>2720</td></tr>
@@ -138,6 +137,8 @@
             <tr><td>President's Office (Shaylea Scribner)</td><td>2733</td></tr>
             <tr><td>Residential Life</td><td>2704</td></tr>
             <tr><td>Student Activities</td><td>5904</td></tr>
+            <tr><td>Student Ambassador Office</td><td>2305</td></tr>
+            <tr><td>Top Desk</td><td>2313</td></tr>
             <tr><td>Vice President of Enrollment</td><td>5911</td></tr>
           </table>
         </div>
