--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
         </a>
       </div>
       <div class="news">
-        <h1>Office Updates &amp; News</h1>
+        <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
         <div class="items"></div>
       </div>
+      <!-- TODO  -->
+      <!-- Workday -->
     </div>
     <footer>
       <div id="champlain">
@@ -98,23 +100,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
     <script src="./assets/tabletop.js" charset="utf-8"></script>
     <script type="text/javascript">
-      $("#coverage").click(function(event) {
-        event.preventDefault();
-        $("#coverage").css("background-color", "#EE3124");
-        $("#coverage span").css("font-size", "20px");
-        $("#coverage").addClass("animated shake");
-        $("#coverage i").hide();
-        $("#coverage").prepend('<i class="fa fa-user-secret fa-4x" aria-hidden="true"></i>');
-        $("#coverage span").text("RIGHT CLICK → Open In Incognito");
-        setTimeout(function(){
-          $("#coverage").css("background-color", "#00aeef");
-          $("#coverage").removeClass("animated shake");
-          $("#coverage i").hide();
-          $("#coverage").prepend('<i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>');
-          $("#coverage span").text("Shift Coverage");
-        }, 5000);
+      $( document ).ready(function() {
+        // Intialize Updates Board
+        init();
+
+        // Set up incognito clicks
+        $("#coverage").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
       });
-      window.onload = function() { init() };
 
       var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1VPJsWRqeBW6t7xn3JphKra1LwrmyJpstcjhJz0tTyDk/pubhtml';
 
@@ -149,6 +144,31 @@
         setTimeout(function(){
           init();
         }, 10000);
+      }
+
+      function isMobile(){
+        return ($(".news").css("display") == "none") ? true : false;
+      }
+
+      function incognitoShake(element){
+        var text = isMobile() ? "HOLD → Open In Incognito" : "RIGHT CLICK → Open In Incognito";
+        var size = isMobile() ? "30px" : "";
+        element.css("background-color", "#EE3124");
+        element.find("span").css("font-size", size);
+        element.addClass("animated shake");
+        element.find("i").hide();
+        element.find("img").hide();
+        element.prepend('<i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>');
+        element.find("span").text(text);
+        setTimeout(function(){
+          element.css("background-color", "#00aeef");
+          element.find("span").css("font-size", "");
+          element.removeClass("animated shake");
+          element.find("i").show();
+          element.find("img").show();
+          element.find("#secret").hide();
+          element.find("span").text("Shift Coverage");
+        }, 5000);
       }
     </script>
   </body>
