--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="http://bit.ly/F16SACoverage">
           <div class="icon" id="coverage">
             <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
-            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
+            <i class="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
             <span>Shift Coverage</span>
           </div>
         </a>
@@ -84,7 +84,7 @@
         <a href="http://bit.ly/SATourFeedback">
           <div class="icon" id="feedback">
             <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i>
-            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
+            <i class="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
             <span>Tour Feedback</span>
           </div>
         </a>
