--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="http://bit.ly/F16SACoverage">
           <div class="icon" id="coverage">
             <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
-            <i class="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
             <span>Shift Coverage</span>
           </div>
         </a>
@@ -84,7 +84,7 @@
         <a href="http://bit.ly/SATourFeedback">
           <div class="icon" id="feedback">
             <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i>
-            <i class="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
             <span>Tour Feedback</span>
           </div>
         </a>
@@ -171,7 +171,7 @@
         element.addClass("animated shake");
         element.find("i").hide();
         element.find("img").hide();
-        element.find(".secret").show();
+        element.find("#secret").show();
         element.find("span").text(text);
         setTimeout(function(){
           element.css("background-color", "#00aeef");
@@ -179,7 +179,7 @@
           element.removeClass("animated shake");
           element.find("i").show();
           element.find("img").show();
-          element.find(".secret").hide();
+          element.find("#secret").hide();
           element.find("span").text(link);
         }, 5000);
       }
