Another incognito fix

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         // Intialize Updates Board
         init();
 
+        $("#secret").hide();
+
         // Set up incognito clicks
         $("#coverage").click(function(event) {
           event.preventDefault();
