Added meta tag for responsive design, updated some links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Ambassador Homepage</title>
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
@@ -38,7 +39,7 @@
             <span>Project Tracker</span>
           </div>
         </a>
-        <a href="https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220">
+        <a href="https://docs.google.com/spreadsheets/d/18aXXENkxWQzneaTbOADKU1DzRPhwwMNr5ecLqBWrCYQ/edit#gid=2031798795">
           <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
