--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
             <span>Tour Feedback</span>
           </div>
         </a>
+        <a href="https://www.champlain.edu/current-students">
+          <div class="icon" id="drive">
+            <img src="images/shield_white.png" style="width: 45px; height: auto; padding-left: 55px; padding-top: 5px;" alt="">
+            <span style="padding-top: 15px; font-size: 19px;">Current Students</span>
+          </div>
+        </a>
+        <a href="https://my.champlain.edu/google/index/off/1/service/workday">
+          <div class="icon" id="workday">
+            <img src="images/workday.png" style="width: 53px; height: auto; padding-left: 50px;" alt="">
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="padding-top: 10px;"></i>
+            <span style="margin-top: 15px;">Workday</span>
+          </div>
+        </a>
       </div>
       <div class="news">
         <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
@@ -122,6 +135,10 @@
           incognitoShake($(this));
         });
         $("#feedback").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
+        $("#workday").click(function(event) {
           event.preventDefault();
           incognitoShake($(this));
         });
