Added some consistent styles to new workday and current student button

--- a/index.html
+++ b/index.html
@@ -83,23 +83,23 @@
           </div>
         </a>
         <a href="http://bit.ly/SATourFeedback">
-          <div class="icon" id="feedback">
-            <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i>
+          <div class="icon-update" id="feedback">
+            <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
             <span>Tour Feedback</span>
           </div>
         </a>
         <a href="https://www.champlain.edu/current-students">
-          <div class="icon" id="drive">
-            <img src="images/shield_white.png" style="width: 45px; height: auto; padding-left: 55px; padding-top: 5px;" alt="">
-            <span style="padding-top: 15px; font-size: 19px;">Current Students</span>
+          <div class="icon-update" id="drive">
+            <img src="images/shield_white.png" alt=""> <br>
+            <span style="font-size: 18px;">Current Students</span>
           </div>
         </a>
         <a href="https://my.champlain.edu/google/index/off/1/service/workday">
-          <div class="icon" id="workday">
-            <img src="images/workday.png" style="width: 53px; height: auto; padding-left: 50px;" alt="">
+          <div class="icon-update" >
+            <img src="images/workday.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="padding-top: 10px;"></i>
-            <span style="margin-top: 15px;">Workday</span>
+            <span>Workday</span>
           </div>
         </a>
       </div>
