--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
+    <link rel="stylesheet" href="styles/calendar.css" media="screen" title="no title">
     <link rel="stylesheet" href="styles/sidebar.css" media="screen" title="no title">
   </head>
   <body>
@@ -32,18 +33,73 @@
     </nav>
 
     <div class="sidebar">
-      <img src="images/shield_color.png" alt=""/>
+      <div class="logo">
+        <img src="images/shield_color.png" alt=""/>
+      </div>
+      <a href="https://bit.ly/admprojects">
+        <div class="side-element">
+          <i class="fa fa-tasks" aria-hidden="true"></i>
+          <p>Project Tracker</p>
+        </div>
+      </a>
+      <a href="https://docs.google.com/spreadsheets/d/18aXXENkxWQzneaTbOADKU1DzRPhwwMNr5ecLqBWrCYQ/edit#gid=2031798795">
+        <div class="side-element">
+          <i class="fa fa-th-list" aria-hidden="true"></i>
+          <p>Schedule</p>
+        </div>
+      </a>
+      <a href="https://www.google.com/calendar/render?pli=1#h">
+        <div class="side-element">
+          <i class="fa fa-calendar" aria-hidden="true"></i>
+          <p>Calendar</p>
+        </div>
+      </a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">
+        <div class="side-element">
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <p>Gmail</p>
+        </div>
+      </a>
+      <a href="https://drive.google.com/drive/#my-drive">
+        <div class="side-element">
+          <img src="images/googledrive.ico" alt="">
+          <p>Gmail</p>
+        </div>
+      </a>
+      <a href="http://bit.ly/F16SACoverage">
+        <div class="side-element">
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <p>Coverage</p>
+        </div>
+      </a>
+      <a href="http://bit.ly/satrainingprogress">
+        <div class="side-element">
+          <img src="images/wings.png" alt="">
+          <p>Wings</p>
+        </div>
+      </a>
+      <!-- <a href="pages/saotm.html">
+        <div class="side-element">
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <p>SAOTM</p>
+        </div>
+      </a> -->
     </div>
 
     <div class="wrapper">
-      <div class="news">
-        <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
-        <div class="items"></div>
+      <div class="left">
+        <div class="news">
+          <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
+          <div class="items"></div>
+        </div>
+        <!-- <div class="info">
+          <h1>Info</h1>
+        </div> -->
       </div>
       <!-- TODO  -->
       <!-- Workday -->
       <div class="events-upcoming">
-        <iframe src="https://calendar.google.com/calendar/embed?src=champlain.edu_n4tc14h37mq03qj9vnhqinue90%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=champlain.edu_n4tc14h37mq03qj9vnhqinue90%40group.calendar.google.com&amp;color=%FFFFFF&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
     <!-- <footer>
