Fixed incognito styling on links with images

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <a href="http://bit.ly/SATourFeedback">
           <div class="icon-update" id="feedback">
             <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i> <br>
-            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Tour Feedback</span>
           </div>
         </a>
@@ -96,9 +96,9 @@
           </div>
         </a>
         <a href="https://my.champlain.edu/google/index/off/1/service/workday">
-          <div class="icon-update" >
+          <div class="icon-update" id="workday">
             <img src="images/workday.png" alt=""> <br>
-            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="padding-top: 10px;"></i>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Workday</span>
           </div>
         </a>
