--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               );
             }
           });
-          if ($(".news .items").length == 1){
+          if ($(".news .items").length < 1){
             $(".news .items").append("<h3> No updates at this time </h3>").css("overflow-y", "hidden");
           }
         }
