Changed the schedule link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span>Project Tracker</span>
           </div>
         </a>
-        <a href="https://docs.google.com/spreadsheets/d/18aXXENkxWQzneaTbOADKU1DzRPhwwMNr5ecLqBWrCYQ/edit#gid=2031798795">
+        <a href="https://docs.google.com/a/champlain.edu/spreadsheets/d/1MoFqHQQevYCX_g62CETureLqqD_6vTOFMabQMuQ9DFk/edit?usp=sharing">
           <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
